<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GreenSaver</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_electric_device">Add electric device</string>
    <string name="add_water_activity">Add water activity</string>
    <string name="add_refuse_production">Add waste segregation</string>
    <string name="show_user">Show User\'s elements</string>
    <string name="show_authors">About</string>
    <string name="title_activity_show_user">User\'s Elements</string>
    <string name="electric_device_list">Electric Devices</string>
    <string name="water_activity_list">Water</string>
    <string name="refuse_production_list">Litter</string>
    <string name="title_activity_add_electric_device">Add an electric device</string>
    <string name="zero_value">0</string>
    <string name="reset_button">Reset all elements</string>

    <string-array name="electric_device_spinner_list">
        <item>TV</item>
        <item>Radio</item>
        <item>Computer</item>
        <item>Printer</item>
        <item>Router</item>
        <item>Set-Top Box</item>
        <item>DVD set</item>
        <item>Microwave</item>
    </string-array>

    <string name="add_electric_device_button">Add Electric Device</string>
    <string name="add_electric_device_amount">Amount</string>
    <string name="add_electric_device_power_consumption">Power consumption [Watts]</string>
    <string name="add_electric_device_hours">Hours per day</string>
    <string name="add_electric_device_standby_power">Standby power consumption [Watts]</string>
    <string name="add_electric_device_standby_hours">Standby hours per day</string>
    <string name="title_activity_electric_info">Electric devices info</string>
    <string name="title_activity_add_water">Add water activity</string>
    <string name="water_activity_spinner">Select water activity</string>
    <string name="standby_on">Standby ON</string>
    <string name="standby_off">Standby OFF</string>

    <string-array name="water_activity_spinner_list">
        <item>Washing machine</item>
        <item>Dishwasher</item>
        <item>Washing up</item>
        <item>Bath</item>
        <item>Shower</item>
        <item>Cleaning hands</item>
        <item>Brushing teeth/shaving</item>
        <item>Washing the car</item>
    </string-array>

    <string name="add_water_activity_liters_used">Liters used</string>
    <string name="add_water_activity_times_per_day">Times per day</string>
    <string name="add_water_activity_button">Add water activity</string>
    <string name="title_activity_add_refuse_production">Add waste segregation</string>

    <string-array name="refuse_production_spinner_list">
        <item>Segregation</item>
        <item>Plastic bags</item>
        <item>Pressing bottles</item>
        <item>Medicine</item>
        <item>Batteries and bulbs</item>
        <item>Household facilities</item>
        <item>Big size waste</item>
    </string-array>

    <string name="add_refuse_production_point_value">Point value</string>
    <string name="refuse_production_spinner">Select waste production</string>
    <string name="add_refuse_production_button">Add waste segregation</string>
    <string name="refuse_production_info">The point value represents how important it is
        to segregate waste this way or to take care of proper disposal of this kind of waste.</string>
    <string name="title_activity_water_info">Water usage info</string>
    <string name="title_activity_refuse_info">Rubbish segregation info</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_add_element_basic">Basic properties</string>

    <string name="reset_dialog_message">This will erase all your settings.</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>

</resources>
