<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="greensaver.app.AddWaterActivityActivity">


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/water_activity_spinner"
        android:entries="@array/water_activity_spinner_list"
        android:prompt="@string/water_activity_spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:text="@string/add_water_activity_liters_used"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:progress="50"
            android:id="@+id/water_activity_liters_used_bar" />
        <TextView
            android:id="@+id/water_activity_liters_used_box"
            android:layout_weight="0"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:text="@string/zero_value"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textStyle="bold"
        android:text="@string/add_water_activity_times_per_day"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/water_activity_times_per_day_bar"
            android:layout_weight="1"
            android:progress="50"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:id="@+id/water_activity_times_per_day_box"
            android:layout_weight="0"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:text="@string/zero_value"
            android:textStyle="bold"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_water_activity_button"
        android:id="@+id/add_electric_device_button"
        android:onClick="addWaterActivity"
        android:layout_marginTop="20dp" />

</LinearLayout>
