<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#10B9A4"
    tools:context="greensaver.app.ShowUserActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/electric_device_list"/>

            <greensaver.app.ExpandableGridView
                android:id="@+id/electric_devices_grid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:numColumns="2" >

            </greensaver.app.ExpandableGridView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/water_activity_list"/>

            <greensaver.app.ExpandableGridView
                android:id="@+id/water_activity_grid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:numColumns="2">

            </greensaver.app.ExpandableGridView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/refuse_production_list" />

            <greensaver.app.ExpandableGridView
                android:id="@+id/refuse_production_grid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:numColumns="2">

            </greensaver.app.ExpandableGridView>
>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
