<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?android:attr/actionBarSize"
    android:paddingBottom="@dimen/activity_bottom_margin"
    android:id="@+id/background"
    android:background="@drawable/aaa"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="greensaver.app.AddElectricDeviceActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:background="@drawable/text_border">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/electric_device_name_box"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:padding="15dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/add_electric_device_power_consumption"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/electric_device_power_consumption_bar"
                    android:layout_weight="1"
                    android:progress="50"
                    android:layout_gravity="center_horizontal" />
                <TextView
                    android:id="@+id/electric_device_power_consumption_box"
                    android:layout_weight="0"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="15dp"
                    android:text="@string/zero_value"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/add_electric_device_hours"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/electric_device_hours_per_day_bar"
                    android:layout_weight="1"
                    android:progress="10"
                    android:layout_gravity="center_horizontal" />
                <TextView
                    android:id="@+id/electric_device_hours_per_day_box"
                    android:layout_weight="0"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="15dp"
                    android:text="@string/zero_value"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/add_electric_device_standby_power"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/electric_device_standby_power_bar"
                    android:layout_weight="1"
                    android:progress="50" />
                <TextView
                    android:id="@+id/electric_device_standby_power_box"
                    android:layout_weight="0"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="15dp"
                    android:text="@string/zero_value"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/set_standby_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="0"
                    android:layout_gravity="center_vertical"
                    android:text="@string/standby_on"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/set_standby_button"
                    android:layout_gravity="top"
                    android:background="@drawable/prad"
                    android:layout_marginLeft="50dp"
                    android:onClick="setStandby"
                    android:layout_marginTop="20dp" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_electric_device_button"
                android:id="@+id/add_electric_device_button"
                android:onClick="addElectricDevice"
                android:layout_marginTop="20dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
