<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background"
    android:background="@drawable/aaa"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?android:attr/actionBarSize"
    android:paddingBottom="@dimen/activity_bottom_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="greensaver.app.AddRefuseProductionActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/text_border">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/refuse_production_name_box"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="15dp"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:padding="10dp"
                android:text="Point value:"/>

            <TextView
                android:id="@+id/refuse_production_point_value_box"
                android:layout_weight="0"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/zero_value"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="15dp"
            android:text="@string/refuse_production_info"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/add_refuse_production_button"
            android:id="@+id/add_refuse_production_button"
            android:onClick="addRefuseProduction" />

    </LinearLayout>

</LinearLayout>
